fixed options not visible

--- a/src/pages/components/AddingChannel/create-channel.css
+++ b/src/pages/components/AddingChannel/create-channel.css
@@ -2,7 +2,7 @@
     margin-bottom: 20px;
 }
 
-label {
+.create-channel-header{
     display: block;
     color: #fff;
     margin-bottom: 10px;
